[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Graphics/Objects/Candle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/Candle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 15.5 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 4, 3, 2 ]
}

[node name="Candle" type="Area2D"]
position = Vector2( 0, -9 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
vframes = 12
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 7.5 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Candle_Ani" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Candle_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Candle_area_exited"]
